# VqePy

./: .gitignore  3SpinMolecule.ipynb  Ansatzs.py  Datos de rendimiento.xlsx  DatosH2grad.csv  DatosH2scipy.csv  H2Molecule.ipynb  Hubbard.ipynb  LICENCE.txt  Molecule.ipynb  PhysicsFormulas.py  Pruebas.ipynb  README.md  SOElectronic.csv  Spin.ipynb  VQEElectronic.csv  VQEclass.py  VQEsimenviroment.py  VQEtest.py  VQTElectronic.csv  class_electronic_test.py  class_hubbard_test.py  class_spin_test.py  class_test.py  classes.py  demo.ipynb  graficos.ipynb  h2.xyz  he2.xyz  main.py  observable.py  observables.py  param_obs.yml  parameters.yml  physics_formulas.py  prob.py  pyproject.toml  requirements.txt  search.py  setup.cfg  (+3 more)
.github/workflows/: push_event_workflow.yml  python-publish.yml
Demos/: demo_density.ipynb  demo_density_GS.ipynb  demo_density_GS_new.ipynb  demo_upper_spines.ipynb  test.ipynb
ExampleFiles/: parameters_electronic.yml
classes/: ansatz.py  global_func.py  hamiltonian.py  variational.py
datos-memoria/: datos.xlsx
demos/: ADAMTheta.csv  GDTheta.csv  Hubbard.ipynb  Molecule.ipynb  Molecule2.ipynb  Pruebas.ipynb  Spin.ipynb  Spin2.ipynb  lih_eq_kup.csv  lih_eq_uc.csv  lih_geq_kup.csv  lih_geq_uc.csv  lih_potencial_kup.csv  lih_potencial_uc.csv  lih_undereq_kup.csv  lih_undereq_uc.csv  tutorial_vqt.ipynb
methods/: optimizacion_structure.py  variational_quantum_eigensolver.py
methods/functions/: backend.py  min_methods.py
physics/: electronic.py  fermihubbard.py  spin.py
physics/Hybrid/: thermal.py
physics/functions/: ansatz.py  constans.py  min_methods.py
quantumsim/: __init__.py  optimizacion_structure.py  variational_quantum_eigensolver.py  variational_quantum_thermalizer.py
quantumsim/ansatz/: __init__.py  ansatz.py  base.py  custom_ansatz.py  given_ansatz.py  he_ansatz.py  kupccgsd_ansatz.py  uccds_ansatz.py  upccgsd_ansatz.py
quantumsim/beginstate/: __init__.py  beginstate.py
quantumsim/functions/: ansatz.py  constans.py  funciones.py  min_methods.py
quantumsim/lattice/: lattice.py
quantumsim/observable/: __init__.py
quantumsim/observable/Hybrid/: thermal.py
quantumsim/observable/Quantum/: __init__.py  thermal.py
quantumsim/observable/classic/: __init__.py  thermal.py
quantumsim/optimizers/: __init__.py  adap_opt.py  funciones.py  gradient_opt.py  jax_opt.py  min_methods.py  scipy_opt.py
quantumsim/variational/: __init__.py  adaptative.py  optimizacion_structure.py  variational_quantum_eigensolver.py  variational_quantum_thermalizer.py
quantumsim/variational/adapt/: __init__.py  base.py  fermihubbard.py  molecular.py
quantumsim/variational/struct/: __init__.py  struct.py
quantumsim/variational/vqe/: __init__.py  base.py  fermihubbard.py  molecular.py  spin.py
quantumsim/vqepy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quantumsim/vqesimulation.egg-info/: PKG-INFO  SOURCES.txt
tencent/: tencent_test.py
test/: backend_ionq.py  backend_qiskit.py  electronic_test.py  h2.xyz  spin_test.py  structure_test.py
tests/: test.py
