[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2.0",
  "setuptools-scm >= 6.3.2",
  "wheel >= 0.37.0",
]

[metadata]
name = "vqepy"
author = "Javier Norambuena Leiva"
author_email = "javier.norambuenal@sansano.usm.cl"
description = "An open source Python package for molecular and condensed matter VQE research"
readme = "README.md"
license = {file = "LICENSE.md"}
url = "https://github.com/javinoram/VqePy"
project_url = { repository = "https://github.com/javinoram/VqePy" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
python_requires = ">=3.10"
dynamic = [ "version", ]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"vqepy.quantumsim" = ["*"]

dependencies = [
    "pyscf",
    "numpy",
    "scipy",
    "pennylane",
    "pandas",
    "matplotlib",
    "jax[cpu]",
    "pennylane-qiskit",
    "qiskit_ibm_provider",
    "pyyaml",
    "networkx",
    "basis-set-exchange",
    "ipykernel",
    "pennylane-lightning",
    "jaxopt",
    "optax",
]
