[metadata]
name = vqesimulation
version = 1.0.1
author = Javier Norambuena Leiva
author_email = javier.norambuenal@sansano.usm.cl
description = Paquete para construir hamiltonianos y ejecutar el VQE
long_description = file: README.md, LICENCE.txt
long_description_content_type = text/markdown
url = https://github.com/javinoram/vqesimulation
project_url = 
    repository = https://github.com/javinoram/vqesimulation 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = quantumsim
packages = find:
python_requires = >=3.9

[options.packages.find]
where = quantumsim
