[metadata]
name = vqepy
version = 1.0.0
author = Javier Norambuena Leiva
author_email = javier.norambuenal@sansano.usm.cl
description = An open source Python package for molecular and condensed matter VQE research
long_description = file: README.md, LICENCE.txt
long_description_content_type = text/markdown
url = https://github.com/javinoram/VqePy
project_url = 
    repository = https://github.com/javinoram/VqePy 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = quantumsim
packages = find:
python_requires = >=3.9

[options.packages.find]
where = quantumsim


